--- a/module/strategy/WalkToBall/data/config/WalkToBall.yaml
+++ b/module/strategy/WalkToBall/data/config/WalkToBall.yaml
@@ -3,3 +3,6 @@ log_level: DEBUG
 
 # How long to wait until the ball is lost and we should walk in a search pattern
 ball_search_timeout: 2
+
+# Y - Offset for ball position such that ball is approached with foot behind ball
+ball_y_offset: 0.1
