--- a/module/planning/FallingRelaxPlanner/data/config/FallingRelaxPlanner.yaml
+++ b/module/planning/FallingRelaxPlanner/data/config/FallingRelaxPlanner.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: DEBUG
+log_level: INFO
 
 # Checks based on the sum of rotation rate for all the axes
 gyroscope_magnitude:
