--- a/module/network/NetworkForwarder/data/config/NetworkForwarder.yaml
+++ b/module/network/NetworkForwarder/data/config/NetworkForwarder.yaml
@@ -1,4 +1,4 @@
-log_level: WARN
+log_level: INFO
 
 # List the message types you want to send
 # Depending on what value you put it will influence how it is sent:
