--- a/module/planning/PlanLook/data/config/PlanLook.yaml
+++ b/module/planning/PlanLook/data/config/PlanLook.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: TRACE
+log_level: INFO
 
 # How long to wait until looking for the ball again (seconds)
 ball_search_timeout: 2
