--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,19 +18,7 @@
   "files.associations": {
     "*.role": "cmake",
     ".clang-tidy": "yaml",
-    ".Doxyfile": "properties",
-    "*.ipp": "cpp",
-    "regex": "cpp",
-    "cholesky": "cpp",
-    "core": "cpp",
-    "eigenvalues": "cpp",
-    "geometry": "cpp",
-    "householder": "cpp",
-    "jacobi": "cpp",
-    "lu": "cpp",
-    "qr": "cpp",
-    "svd": "cpp",
-    "*.proto": "cpp"
+    ".Doxyfile": "properties"
   },
   "python.analysis.extraPaths": ["${workspaceFolder}/tools", "${workspaceFolder}/nuclear"],
   "python.formatting.provider": "black",
