--- a/.github/workflows/nusight.yaml
+++ b/.github/workflows/nusight.yaml
@@ -7,6 +7,9 @@ on:
   push:
     branches: [main]
   pull_request:
+  # Trigger for merge queue
+  merge_group:
+    types: [checks_requested]
 
 # Ensure that only one instance of the workflow is run at a time for each branch/tag.
 # Jobs currently running on the branch/tag will be cancelled when new commits are pushed.
