webots specific get up

--- a/module/behaviour/skills/Getup/data/config/webots/Getup.yaml
+++ b/module/behaviour/skills/Getup/data/config/webots/Getup.yaml
@@ -9,6 +9,5 @@ getup_front:
   - "StandUpFront.yaml"
   - "Stand.yaml"
 getup_back:
-  - "RollOverBack.yaml"
-  - "StandUpFront.yaml"
+  - "StandUpBack.yaml"
   - "Stand.yaml"
