--- a/module/platform/openCR/HardwareIO/data/config/HardwareIO_OpenCR.yaml
+++ b/module/platform/openCR/HardwareIO/data/config/HardwareIO_OpenCR.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: TRACE
+log_level: DEBUG
 
 battery:
   charged_voltage: 16.8
